After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660856 - can't add a jabber account without a tld in username
can't add a jabber account without a tld in username
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
: 667757 667784 670568 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-10-04 07:29 UTC by marc
Modified: 2012-02-22 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description marc 2011-10-04 07:29:42 UTC
Open empathy
Press F4 to add an account
Click on the + to add an account
Choose Jabber as a Protocol
Enter login ID test@test

The apply button will stay greyed out until you have a username with test@test.com for example.

The username shouldn't require the tld.

On a side note, is it possible to modify a file to set the username outside of the GUI?
Comment 1 Michael 2011-10-04 16:16:20 UTC
I can confirm this.
Comment 2 Guillaume Desmottes 2011-10-12 14:23:45 UTC
IIRC the XMPP spec, "test@test" is not a valid JID.
Comment 3 marc 2011-10-12 14:31:37 UTC
In the company I work for, they are using openfire, our usernames don't have a .org, .com, .whatever because I don't see why they would, these are only on a private network. Perhaps the XMPP spec should be amended or shouldn't be followed?
Comment 4 Guillaume Desmottes 2011-10-12 17:45:48 UTC
Looks like you're right if I understand http://tools.ietf.org/html/rfc6122#section-2.1 correctly.

I suck at regexps, if one is interested fixing this that's JABBER_USER_NAME in libempathy-gtk/empathy-account-widget.c
Comment 5 marc 2011-10-13 19:21:53 UTC
The following will do the job:
#define JABBER_USER_NAME  "[^@/]+@[^@/]+"

I'm sorry but I don't feel like going through the process to contribute as described there: http://live.gnome.org/Empathy/Git
Comment 6 Guillaume Desmottes 2012-01-17 09:45:14 UTC
*** Bug 667784 has been marked as a duplicate of this bug. ***
Comment 7 Guillaume Desmottes 2012-01-17 09:51:08 UTC
*** Bug 667757 has been marked as a duplicate of this bug. ***
Comment 8 Guillaume Desmottes 2012-01-17 10:13:53 UTC
I merged this; thanks and sorry for the delay.
Comment 9 Guillaume Desmottes 2012-02-22 08:18:48 UTC
*** Bug 670568 has been marked as a duplicate of this bug. ***