account-widget: allow JID such as 'test@localhost'

Thanks to marc@ttux.net for his help.

https://bugzilla.gnome.org/show_bug.cgi?id=660856